# syslog

./: .gitignore  CHANGELOG.md  syslog.cabal
.github/workflows/: build.yaml
examples/: validate.hs
src/Syslog/: Bsd.hs  Ietf.hs
test/: Main.hs
