cabal-version: 2.4
name: syslog
version: 0.1.0.0
synopsis: Decode RFC 3164 and RFC 5424 syslog message formats
description:
  Decode syslog messages that were formatted using RFC 3164 (BSD-syslog) or
  RFC 5424 (IETF-syslog).
bug-reports: https://github.com/layer-3-communications/syslog
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2020 Andrew Martin
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Syslog.Bsd
  build-depends:
    , base >=4.12 && <5
    , unpacked-maybe-numeric>=0.1.1
    , chronos >=1.1
    , byteslice >=0.2.2
    , bytesmith >=0.3.6
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall
