cabal-version: 2.4
name: syslog
version: 0.1.0.0
synopsis: Decode RFC 3164 and RFC 5424 syslog message formats
description:
  Decode syslog messages that were formatted using RFC 3164 (BSD-syslog) or
  RFC 5424 (IETF-syslog).
bug-reports: https://github.com/layer-3-communications/syslog
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2020 Andrew Martin
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Syslog.Bsd
    Syslog.Ietf
  build-depends:
    , base >=4.12 && <5
    , unpacked-maybe-numeric>=0.1.1
    , chronos >=1.1
    , byteslice >=0.2.2
    , bytesmith >=0.3.6
    , contiguous >=0.5.1
    , primitive >=0.7.1
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.12.0.0 && <5
    , byteslice >=0.2
    , bytestring
    , bytebuild
    , primitive >=0.7.1
    , syslog
    , tasty >=1.2.3 && <1.3
    , tasty-hunit >=0.10.0.2 && <0.11
    , text >=1.2
    , text-short
